css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/******* Global CSS variable *******/

:root {
    /* font */
    --font-main-title: 'Alegreya', serif;
    --font-middle-title: 'Roboto Condensed', sans-serif;
    --font-content: Arial, Helvetica, sans-serif;
    /* color */
    --dark-teal: #395e6b;
    --middle-teal: #c1d5dc;
    --light-teal: #e3e8eb;
    --dark-grey: #5d5d5d;
    /* main text color */
    --middle-grey: #afaeac;
    --alpha-middle-grey: rgba(175, 174, 172, 0.2);
    /* grey in footer*/
    --light-grey: #f5f5f5;
    --white: #ffffff;
    /* border */
    --dash-border: 1.4px dashed var(--middle-grey);
}

/****** Main *******/

h3 {
    text-transform: uppercase;
    color: var(--dark-teal);
    margin-bottom: 2rem;
}

/*** Entire layout with Grid ***/

body {
    font-family: var(--font-content);
    font-size: 15px;
}

.wrapper {
    height: 100%;
    padding: 1rem;
    display: grid;
    grid-template: [header-top] "logo nav nav" 1fr [header-bottom intro-top] "intro intro intro" 4fr [intro-bottom content-top]"side-left content side-right" 4fr[content-bottom footer-top] "footer footer footer" 1fr [footer-bottom] / 2fr 2.5fr 2fr;
    grid-gap: 10px;
}

/*** Testing ***/

/*
.wrapper div {
    border: 1px solid black;
}
*/

.logo {
    grid-area: logo;
}

.navigation {
    grid-area: nav;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #ffffff;
}

.intro {
    grid-area: intro;
}

.side-left {
    grid-area: side-left;
}

.content {
    grid-area: content;
}

.side-right {
    grid-area: side-right;
}

.footer {
    grid-area: footer;
}

/*** Header ***/

/* Header >> logo */

.logo img {
    width: 100%;
    height: 100%;
}

/* Header >> nav */

nav ul {
    list-style-type: none;
    display: grid;
    grid-template-columns: repeat(5, minmax(max-content, 1fr));
    grid-gap: 1rem;
    transform: translateY(1rem);
}

nav ul li {
    display: inline-block;
    background: linear-gradient(var(--white) 0.4rem, var(--middle-grey));
    border-bottom: 1px solid var(--middle-grey);
    box-shadow: inset -5px -5px 10px 20px var(--alpha-middle-grey);
    text-align: center;
    align-self: center;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

nav ul a {
    text-decoration: none;
    text-transform: uppercase;
    color: var(--dark-teal);
}

/*** Intro ***/

.intro {
    background: linear-gradient(var(--light-teal), var(--middle-teal) 70px);
    position: relative;
    z-index: 1;
    padding: 50px;
}

.intro:before {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 20%;
    content: "";
    background: var(--white);
}

.intro section {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.intro section div{
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}

.intro__imgs_container img {
    border-radius: 50%;
    border: 1px solid var(--dark-teal);
    width: 17vw;
    height: 17vw;
    margin-right: 2rem;
}

.intro__main_text {
    font-family: var(--font-middle-title);
    font-size: 2.8rem;
    color: var(--dark-teal);
    font-weight: bold;
}

.intro__main_text span {
    font-size: 2rem;
}

.intro_content{
    font-size: 1.2rem;
    color: var(--dark-teal);
}

.intro_content a{
    color: var(--dark-teal);
}

.intro__smiling-man{
    display: inline-block;
    max-width: 500px;
    width: 48vw;
    height: 48vw;
    position: absolute;
    bottom: 0px;
    right: 2rem;
    /*float: right;*/
}

/*** Side & main contents ***/
.side-left, .content, .side-right{
    padding: 2rem;
}

.side-left__aside{
    display: grid;
    grid-template-rows: repeat(auto-fill, minmax(max-content, auto));
}

.side-left__aside div{
    border-bottom: var(--dash-border);
}

.side-left__aside div > p{
    font-size: 1.2rem;
    padding: 0.5rem;
}

.side-left__aside__commnetDate--middlegrey{
    font-size: 1rem;
    color: var(--middle-grey);
}

.content section p {
    font-size: 1.2rem;
    padding: 0.5rem;
}

.content__section-bottom-border{
    border-bottom: var(--dash-border);
    margin-bottom: 1rem;
}

.content__section-innerGrid{
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-template-rows: repeat(2, auto);
}

.content__section-innerGrid h3{
    grid-column: 1/3;
    grid-row: 1/2;
}

.content_section-innerGrid img{
    grid-column: 1/2;
    grid-row: 2/3;
}

.content_section-innerGrid p{
    grid-column: 2/3;
    grid-row: 2/3;
}

.side-right{
    display: grid;
    grid-template-rows: 0.3fr 4fr;
}

.side-right__aside ul{
    display: grid;
    height: 70%;
    /*grid-template-rows: repeat(auto-fill, minmax(max-content, auto));*/
    grid-template-rows: repeat(5, minmax(max-content, 1fr));
}

.side-right__aside ul li{
    border-bottom: var(--dash-border);
    font-size: 1.2rem;
    align-self: center;
    padding: 1rem;
}

